<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Deep Thought</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_title">Search</string>
    <string name="search_hint_entries">Search Entries</string>
    <string name="search_hint_tags">Search Tags</string>

    <string name="title_section_entries">Entries</string>
    <string name="title_section_tags">Tags</string>

    <string name="floating_action_menu_add_entry">Entry</string>
    <string name="floating_action_menu_add_tag">Tag</string>
    <string name="floating_action_menu_add_newspaper_article">Newspaper Article</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="ocr">OCR</string>
    <string name="share">Share</string>

    <string name="name">Name</string>
    <string name="description">Description</string>

    <string name="loading_data_wait_message">Loading data ...</string>

    <string name="error_message_could_not_show_activity">Could not show dialog: %s</string>

    <string name="error_message_tag_with_that_name_already_exists">A Tag with that name already exists</string>
    <string name="error_message_tag_name_must_be_a_non_empty_string">Tag name must be a non-empty string</string>

    <string name="list_item_entry_context_menu_edit_title">Edit</string>
    <string name="list_item_entry_context_menu_delete_title">Delete</string>

    <string name="edit_entry_action_bar_title_new_entry">Create new Entry</string>
    <string name="edit_entry_action_bar_title_entry_format">Edit %1$s</string>
    <string name="edit_entry_abstract_label">Abstract</string>
    <string name="edit_entry_tags_label">Tags:</string>
    <string name="edit_entry_button_new_tag_text">New</string>
    <string name="edit_entry_no_tags_set"><![CDATA[<No Tags>]]></string>
    <string name="edit_entry_content_label">Content</string>

    <string name="alert_dialog_entry_has_unsaved_changes_text">Entry contains unsaved changes. Would you like to save them?</string>

    <string name="search">Search</string>
    <string name="search_section_tag_title">Tag Search</string>
    <string name="search_section_tag_label">Tag:</string>
    <string name="search_select_tags"><![CDATA[<Select Tags>]]></string>
    <string name="search_section_content_title">Content Search</string>
    <string name="search_section_results_title">Results:</string>
    <string name="search_contains_text">Contains</string>
    <string name="search_starts_with_text">Starts with</string>
    <string name="search_ends_with_text">Ends with</string>
    <string name="search_equals_text">Equals</string>

    <string name="articles_overview_article_saved">Saved Article %s</string>
    <string name="articles_overview_could_not_extract_article">Could not extract Article %1$s:\r\%2$s</string>
    <string name="copy_url_to_clipboard">Copy URL to Clipboard</string>

    <string name="device_registration_server_allowed_registration">Server allowed registration</string>
    <string name="device_registration_server_denied_registration">Server denied registration</string>
    <string name="device_registration_successfully_registered_device">Successfully registered device %s</string>
    <string name="connect_with_this_device">Connect with this device?</string>
    <string name="never_ask_again">Never ask again</string>

    <string name="add_image">Add Image</string>
    <string name="from_camera">from Camera</string>
    <string name="from_gallery">from Gallery</string>

    <string name="recognize_text">Recognize Text</string>
    <string name="from_camera_photo">from Camera Photo</string>
    <string name="from_gallery_photo">from Gallery Photo</string>

    <string-array name="add_image_or_ocr_text_options">
        <item>@string/add_image</item>
        <item>@string/from_camera</item>
        <item>@string/from_gallery</item>
        <item>@string/recognize_text</item>
        <item>@string/from_camera_photo</item>
        <item>@string/from_gallery_photo</item>
    </string-array>

</resources>
