<?xml version="1.0" encoding="utf-8"?>

<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtvwSearchSectionTitleTags"
        android:text="@string/search_section_tag_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_section_title_height"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/search_section_title_text_size"
        />

    <RelativeLayout
        android:id="@+id/rlytSearchTag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_section_tags_height"
        android:layout_below="@+id/txtvwSearchSectionTitleTags"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true">

        <TextView
            android:id="@+id/txtvwSearchTagsToSearchFor"
            android:text="@string/search_select_tags"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/search_tags_to_search_for_height"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/btnSearchTags"
            android:gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textSize="@dimen/search_section_title_text_size"
            />

        <Button
            android:id="@+id/btnSearchTags"
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/search_tags_to_search_for_height"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/txtvwSearchTagsToSearchFor"
            android:enabled="false"
            />

        <EditText
            android:id="@+id/edtxtSearchTagsFilter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_section_tags_search_view_height"
            android:layout_below="@+id/txtvwSearchTagsToSearchFor"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:singleLine="true"
            />

        <ListView
            android:id="@+id/lstvwSearchTags"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_list_view_tags_height"
            android:layout_below="@+id/edtxtSearchTagsFilter"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtvwSearchSectionContentTitle"
        android:text="@string/search_section_content_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_section_title_height"
        android:layout_below="@+id/rlytSearchTag"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical"
        android:layout_marginTop="6dp"
        android:textSize="@dimen/search_section_title_text_size"
        />

    <RelativeLayout
        android:id="@+id/rlytSearchContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtvwSearchSectionContentTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:visibility="gone"
        >

        <Spinner
            android:id="@+id/spnSearchContentSearchOption"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/search_section_content_search_options_height"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            />

        <EditText
            android:id="@+id/edtxtSearchContent"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/search_section_content_search_options_height"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/spnSearchContentSearchOption"
            android:layout_toRightOf="@+id/spnSearchContentSearchOption"
            android:singleLine="true"
            />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_below="@+id/rlytSearchContent" />

    <TextView
        android:id="@+id/txtvwSearchSectionResultsTitle"
        android:text="@string/search_section_results_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_section_title_height"
        android:layout_below="@+id/rlytSearchContent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:textSize="@dimen/search_section_title_text_size"/>

    <ListView
        android:id="@+id/lstvwSearchResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtvwSearchSectionResultsTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="6dp"
        />

</RelativeLayout>

<!--</ScrollView>-->