<?xml version="1.0" encoding="utf-8"?>

<com.github.clans.fab.FloatingActionMenu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"

    android:id="@+id/fab_menu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_margin="@dimen/fab_margin"

    fab:menu_labels_style="@style/MenuLabelsStyle"
    fab:menu_shadowColor="#444"
    fab:menu_colorNormal="?attr/colorPrimary"
    fab:menu_colorPressed="?attr/colorAccent"
    fab:menu_colorRipple="?attr/colorPrimaryDark"

    fab:menu_animationDelayPerItem="50">


    <!-- set fab:fab_label to any value but if not set at all Label Text set in MainActivity won't be displayed at all -->
    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_favorite_content_extractor_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MenuButtonsStyle"
        android:src="@drawable/fab_add"
        fab:fab_label=" "
        android:visibility="gone"
    />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_favorite_content_extractor_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MenuButtonsStyle"
        android:src="@drawable/fab_add"
        fab:fab_label=" "
        android:visibility="gone"
    />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_favorite_content_extractor_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MenuButtonsStyle"
        android:src="@drawable/fab_add"
        fab:fab_label=" "
        android:visibility="gone"
    />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_favorite_content_extractor_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MenuButtonsStyle"
        android:src="@drawable/fab_add"
        fab:fab_label=" "
        android:visibility="gone"
    />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_add_newspaper_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MenuButtonsStyle"
        android:src="@drawable/fab_add"
        fab:fab_label="@string/floating_action_menu_add_newspaper_article"
        android:visibility="gone"
    />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_add_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MenuButtonsStyle"
        android:src="@drawable/fab_add"
        fab:fab_label="@string/floating_action_menu_add_tag"
        android:visibility="gone"
    />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_add_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MenuButtonsStyle"
        android:src="@drawable/fab_add"
        fab:fab_label="@string/floating_action_menu_add_entry"
    />

</com.github.clans.fab.FloatingActionMenu>