<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rlyEditEntryActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@color/toolbar_background">
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/txtvwEditEntryAbstractLabel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/edit_entry_abstract_height"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="4dp"
        android:textSize="@dimen/edit_entry_labels_text_size"
        android:text="@string/edit_entry_abstract_label"
        />

    <EditText
        android:id="@+id/edtxtEditEntryAbstract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtvwEditEntryAbstractLabel"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/txtvwEditEntryAbstractLabel"
        android:layout_alignBottom="@+id/txtvwEditEntryAbstractLabel"
        android:textSize="@dimen/edit_entry_edit_texts_text_size"
        />

    <RelativeLayout
        android:id="@+id/rlydTags"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtvwEditEntryAbstractLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true">

        <TextView
            android:id="@+id/txtvwEditEntryTagsLabel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edit_entry_tags_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="4dp"
            android:textSize="@dimen/edit_entry_labels_text_size"
            android:text="@string/edit_entry_tags_label"
            />

        <TextView
            android:id="@+id/txtvwEditEntryTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/txtvwEditEntryTagsLabel"
            android:layout_alignBottom="@+id/txtvwEditEntryTagsLabel"
            android:layout_marginRight="4dp"
            android:textSize="@dimen/edit_entry_labels_text_size"
            android:ellipsize="none"
            />

        <RelativeLayout
            android:id="@+id/rlydEditEntryEditTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtvwEditEntryTagsLabel"
            android:visibility="visible"
            >

            <EditText
                android:id="@+id/edtxtEditEntrySearchTag"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/edit_entry_search_tags_height"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/btnEditEntryNewTag"
                android:layout_marginRight="6dp"
                android:textSize="@dimen/edit_entry_edit_texts_text_size"
                />

            <Button
                android:id="@+id/btnEditEntryNewTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="70dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@+id/edtxtEditEntrySearchTag"
                android:textSize="@dimen/edit_entry_edit_texts_text_size"
                android:text="@string/edit_entry_button_new_tag_text"
                />

            <ListView
                android:id="@+id/lstvwEditEntryTags"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_entry_list_view_tags_height"
                android:minHeight="@dimen/edit_entry_list_view_tags_min_height"
                android:layout_below="@+id/edtxtEditEntrySearchTag"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                />


            </RelativeLayout>

        </RelativeLayout>

    <TextView
        android:id="@+id/txtvwEditEntryTextLabel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_entry_entry_label_height"
        android:maxHeight="@dimen/edit_entry_entry_label_height"
        android:layout_below="@+id/rlydTags"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="4dp"
        android:textSize="@dimen/edit_entry_labels_text_size"
        android:text="@string/edit_entry_content_label"
        />

    <!--<EditText-->
        <!--android:id="@+id/edtxtEditEntryContent"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/txtvwEditEntryTextLabel"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginTop="-2dp"-->
        <!--android:gravity="start"-->
        <!--android:textSize="@dimen/edit_entry_edit_texts_text_size"-->
        <!--/>-->

    <RelativeLayout
        android:id="@+id/rlydContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtvwEditEntryTextLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-2dp"
        android:gravity="fill_vertical"
        >

    </RelativeLayout>

</RelativeLayout>